--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            resValue "String", "MAPS_API_KEY", mapsApiKey
         }
         debug {
-            buildConfigField "String", "MAPS_API_KEY", mapsApiKey
+            resValue "string", "MAPS_API_KEY", mapsApiKey
         }
     }
 
